# Just-Dist

./: .gitignore  CMakeLists.txt  Guide.md  README.md
include/: functional.hpp  layers.hpp
include/comm/: AllReduceAlgorithm.hpp  ButterflyReduce.hpp  CommBus.hpp  HalvingDoubling.hpp  RingAllReduce.hpp
include/scheduler/: PipelineScheduler.hpp  Scheduler.hpp  Stage.hpp  Task.hpp
include/simulator/: Message.hpp  MessageQueue.hpp  Network.hpp  Node.hpp
include/utils/: Logger.hpp  Timer.hpp
src/: functional.cpp  layers.cpp  main.cpp
src/.cph/: .one.cpp_6481ab9149e4fbbe6ed8b14684fe4ab2.prob
src/comm/: Butterfly.cpp  CommBus.cpp  Halving-Doubling.cpp  NCCL-like.cpp  NCCLReduce.cpp  Ring.cpp  Tree.cpp  TreeAllReduce.cpp
src/scheduler/: PipelineScheduler.cpp  Stage.cpp  pipeline_scheduler.cpp
src/simulator/: MessageQueue.cpp  Network.cpp  Node.cpp
src/utils/: Logger.cpp  Timer.cpp
